# lomaps-generator

./: .gitignore  .hgignore  README.md  build.gradle  how_to_update_mapsforge_writer.md  settings.gradle
_tools/proguard4.11/src/proguard/: ArgumentWordReader.java  ClassPath.java  ClassPathEntry.java  ClassSpecification.java  ClassSpecificationVisitorFactory.java  ConfigurationParser.java  ConfigurationWriter.java  DataEntryReaderFactory.java  DataEntryWriterFactory.java  DescriptorKeepChecker.java  DuplicateClassPrinter.java  FileWordReader.java  FullyQualifiedClassNameChecker.java  GPL.java  Initializer.java  InputReader.java  KeepClassMemberChecker.java  LineWordReader.java  OutputWriter.java  ProGuard.java  SeedPrinter.java  (+3 more)
config/: app_config.yaml  config.xml  default_store_item_definition.json
gradle/wrapper/: gradle-wrapper.properties
lomaps-generator-tools/: README.md  pyproject.toml
lomaps-generator-tools/lomaps_tools/: lomaps_tools.py
lomaps-generator-tools/lomaps_tools/osm/: osm_entity.py  osm_writer.py
lomaps-generator-tools/lomaps_tools/shp2osm/: shp2osm.py
lomaps-generator-tools/lomaps_tools/tourist/: consts.py  handlers.py  helpers.py  storage.py  tourist2ways.py
lomaps-generator-tools/lomaps_tools/update/: osm_file_validator.py  osm_update.py
lomaps-generator-tools/lomaps_tools/utils/: cmd_utils.py
mapsforge-core/: build.gradle  pom.xml
mapsforge-map-writer/: build.gradle  pom.xml
maptiler-api/: build.gradle.kts
osmToolsBasic/: build.gradle  gradle.properties
osmToolsCore/: build.gradle
osmToolsDataWriter/: build.gradle
(+720 files in other folders)
